--- a/E/Epic/Adventure(ExcelBased)/ads.html
+++ b/E/Epic/Adventure(ExcelBased)/ads.html
@@ -203,33 +203,33 @@
         var filterString = queryString.split('|').length > 2 ? queryString.split('|').splice(2).join('|') : '';
         var adContent = getData(queryString),adContents = {};
         var layout = adContent.data[0].Layout;
-        var productName = adContent.name;
-        location.hash = btoa(layout+'|'+productName).replace('==','');
+        var resortName = adContent.name;
+        location.hash = btoa(layout+'|'+resortName).replace('==','');
         htmlContent += adData.map(function(data){ return '<div '+(layout == data.name ? 'class="selected"' : '')+' data-id="' + data.name + '">'+data.name + '</div>' }).join('');
         document.querySelector('#header').innerHTML = htmlContent;
         htmlContent = '';
         var layoutData = adData.find(function(data){ return data.name == layout; });
         if(layoutData) {
-          htmlContent += layoutData.data.map(function(data){ return '<div '+(productName == data.name ? 'class="selected"' : '')+' data-id="' + layoutData.name + '|' + data.name + '" title="' + layoutData.name + ' > ' + data.name + '">'+data.name + '</div>' }).join('');
+          htmlContent += layoutData.data.map(function(data){ return '<div '+(resortName == data.name ? 'class="selected"' : '')+' data-id="' + layoutData.name + '|' + data.name + '" title="' + layoutData.name + ' > ' + data.name + '">'+data.name + '</div>' }).join('');
         }
         document.querySelector('#subheader').innerHTML = htmlContent;
         var headlines = [];
-        adContent.data.forEach(function(data){ headlines.push(data["Segment"] + '|' + data.Language); });
+        adContent.data.forEach(function(data){ headlines.push(data["Product"] + '|' + data.Language); });
         headlines = headlines.filter(function(value, index, self){ return self.indexOf(value) === index; });
         if(headlines) {
           filterString = filterString.length ? filterString : headlines[0];
           if(!headlines.find(function(headline){ return headline.toLowerCase() == filterString.toLowerCase(); })) { filterString = headlines[0]; }
           var layout = adContent.data[0].Layout;
-          var productName = adContent.name;
-          location.hash = btoa(layout+'|'+productName+'|'+filterString).replace('==','').replace('=','');
+          var resortName = adContent.name;
+          location.hash = btoa(layout+'|'+resortName+'|'+filterString).replace('==','').replace('=','');
           adContents.name = adContent.name;
-          adContents.data = adContent.data.filter(function(data){ return (data["Segment"] + '|' + data.Language).toLowerCase() == filterString.toLowerCase(); });
+          adContents.data = adContent.data.filter(function(data){ return (data["Product"] + '|' + data.Language).toLowerCase() == filterString.toLowerCase(); });
           htmlContent = '';
-          htmlContent += headlines.map(function(headline){ return '<div '+(headline.toLowerCase() == filterString.toLowerCase()? 'class="selected"': '')+' data-id="'+layout+'|'+productName+'|'+headline+'">' + headline.split('|')[0] + '<div>(' + headline.split('|')[1] + ')</div></div>'; }).join('');
+          htmlContent += headlines.map(function(headline){ return '<div '+(headline.toLowerCase() == filterString.toLowerCase()? 'class="selected"': '')+' data-id="'+layout+'|'+resortName+'|'+headline+'">' + headline.split('|')[0] + '<div>(' + headline.split('|')[1] + ')</div></div>'; }).join('');
         }
         document.querySelector('#subsubheader').innerHTML = htmlContent;
         htmlContent = '';
-        htmlContent = adContent.data[0].Layout + ' | ' + adContent.data[0].Product + ' | ' + filterString.split('|').join(' | ');
+        htmlContent = adContent.data[0].Layout + ' | ' + adContent.data[0].Resort + ' | ' + filterString.split('|').join(' | ');
         document.querySelector('#title').innerHTML = htmlContent;
         var headers = document.querySelectorAll('#header > div');
         for(var i = 0; i < headers.length; i++) {
@@ -256,9 +256,9 @@
           var cam = getCAMData(data);
           var adScript = `
           -1==navigator.userAgent.indexOf("MSIE")&&-1==navigator.userAgent.indexOf("Trident")||Object.keys||(Object.keys=function(d){var f=[],e;for(e in d)d.hasOwnProperty(e)&&f.push(e);return f});var amo;
-amo=new function(){var d={};this.variation={};this.attributes={};this.content=[];var f={name:"1",description:"1",provider:"1",brand:"1",display_advertiser_category_name:"1",price:"1",discount_price:"1",picture_url:"1",product_url:"1",passthroughfield1:"1",passthroughfield2:"1",passthroughfield3:"1",passthroughfield4:"1",passthroughfield5:"1",image_url1:"1",image_url2:"1",image_url3:"1",image_url4:"1",image_url5:"1"},e=0;this.registerClick=function(a,c){d[a]=c};this.registerVariation=function(a,c){a&&
+amo=new function(){var d={};this.variation={};this.attributes={};this.content=[];var f={name:"1",description:"1",provider:"1",brand:"1",display_advertiser_category_name:"1",price:"1",discount_price:"1",picture_url:"1",resort_url:"1",passthroughfield1:"1",passthroughfield2:"1",passthroughfield3:"1",passthroughfield4:"1",passthroughfield5:"1",image_url1:"1",image_url2:"1",image_url3:"1",image_url4:"1",image_url5:"1"},e=0;this.registerClick=function(a,c){d[a]=c};this.registerVariation=function(a,c){a&&
 c?"string"!==typeof a||"string"!==typeof c?alert("ERROR: key and value needs to be string"):this.variation[a]=c:alert("ERROR: key or/and value is not passed")};this.registerAttribute=function(a,c,b){a&&b&&c?"TEXT"!=c&&"IMAGE"!=c?alert("ERROR: type needs to be TEXT/IMAGE"):"string"!==typeof a||"string"!==typeof b?alert("ERROR: name and value needs to be string"):this.attributes[a]=b:alert("ERROR: name or/and type or/and value is not passed")};this.registerContent=function(a){if(a)if(validHeader=!0,
-void 0==a.length){for(var c=Object.keys(a),b=0;b<c.length;b++){var d=c[b],g=0;if(1==f[d])g=1;else{alert("Invalid Header in Content: "+d);break}}0!=g&&(a.gid=++e,this.content.push(a))}else alert("Content Data needs to be a JSON Object. Passed in Content Data seems to be an Array");else alert("ERROR: Content Data is not passed")};this.onDynAdClick=function(a,c,b,d,e){a=b?b:a?a.product_url:"";0<a.length&&(0==a.indexOf("http://")||0==a.indexOf("https://")||0==a.indexOf("//"))?window.open(a):alert("ERROR: Click URL is not available or is not valid.")};
+void 0==a.length){for(var c=Object.keys(a),b=0;b<c.length;b++){var d=c[b],g=0;if(1==f[d])g=1;else{alert("Invalid Header in Content: "+d);break}}0!=g&&(a.gid=++e,this.content.push(a))}else alert("Content Data needs to be a JSON Object. Passed in Content Data seems to be an Array");else alert("ERROR: Content Data is not passed")};this.onDynAdClick=function(a,c,b,d,e){a=b?b:a?a.resort_url:"";0<a.length&&(0==a.indexOf("http://")||0==a.indexOf("https://")||0==a.indexOf("//"))?window.open(a):alert("ERROR: Click URL is not available or is not valid.")};
 this.onAdClick=function(a,c){var b;a?(0==a.indexOf("http://")||0==a.indexOf("https://")||0==a.indexOf("//")?b=a:d[a]&&(b=d[a]),b?window.open(b):alert("ERROR: Click Parameter "+a+" not registered. Register landing page using amo.registerClick")):alert("ERROR: null or undefined Click Parameter passed")}};
           var cam = ${cam}
           for(var i in cam) { amo.registerVariation(i, cam[i]); }
