--- a/E/Epic/Adventure(ExcelBased)/ads/300x600/300x600.html
+++ b/E/Epic/Adventure(ExcelBased)/ads/300x600/300x600.html
@@ -399,7 +399,7 @@
             content: "$";
             color: #20285d;
             font-size: 50%;
-            vertical-align: middle;
+            vertical-align: .25em;
          }
 
          /* EPIC LOGO */
