--- a/C/Crocs/Crocs_SS20/Personalization_Celebrity/ads/300x600/300x600.html
+++ b/C/Crocs/Crocs_SS20/Personalization_Celebrity/ads/300x600/300x600.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="https://ads.everesttech.net/ads/static/local/AMOLibrary.js"></script>
     <link rel="stylesheet" href="css/style.min.css">
     <!-- <link rel="stylesheet" href="https://use.typekit.net/tag1rnw.css"> -->
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
+    <script src="js/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
       /* @font-face {
