--- a/A/Altice/Altice_Summer2020/ads.html
+++ b/A/Altice/Altice_Summer2020/ads.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Ads</title>
+    <!-- <link rel="icon" href="favicon-16x16.ico" type="image/x-icon"> -->
     <link rel="icon" href="favicon-32x32.ico" type="image/x-icon">
     <style media="screen">
       body {
