--- a/A/Altice/Altice_Summer2020/ads/OPT_AO_65_1yr(300Mbps)(noCard)/300x50/300x50_frame2.html
+++ b/A/Altice/Altice_Summer2020/ads/OPT_AO_65_1yr(300Mbps)(noCard)/300x50/300x50_frame2.html
@@ -104,15 +104,15 @@ amo.registerClick("clickUrl","https://www.altice.com");
 amo.registerAttribute("ctaText","TEXT","Shop now");
 amo.registerAttribute("frameImage2","IMAGE","1x1.png");
 amo.registerAttribute("frameImage3","IMAGE","1x1.png");
-amo.registerAttribute("frameText1","TEXT","Stay connected on<br>your <font class='coloredText'>work day</font>");
-amo.registerAttribute("frameText12","TEXT","and <font class='coloredText'>school day</font>");
+amo.registerAttribute("frameText1","TEXT","Even as times change");
+amo.registerAttribute("frameText12","TEXT","your connections<br>never have to.");
 amo.registerAttribute("frameText21","TEXT","<div style='top:11px;left:9px;'><div class='bulletedText'>Up to 300 Mbps Internet</div></div>");
-amo.registerAttribute("frameText22","TEXT","<div style='top:28px;left:9px;'><div class='bulletedText'>Free installation</div></div>");
+amo.registerAttribute("frameText22","TEXT","<div style='top:28px;left:9px;'><div class='bulletedText'>Live & On Demand TV</div></div>");
 amo.registerAttribute("frameText23","TEXT","&nbsp;");
-amo.registerAttribute("frameText31", "TEXT", "<div style='top:3px;left:8px;font-size:14px;'>300 Mbps Internet</div>");
-amo.registerAttribute("frameText32", "TEXT", "<div style='top:18px;left:8px;font-size:13.5px;'><font style='color:#0084d6;'>$39.99</font> mo./1 yr.</div>");
-amo.registerAttribute("frameText33", "TEXT", "<div style='top:35px;left:8px;font-size:10px;' class='AlticeRegular'>Plus taxes, fees & charges</div>");
-amo.registerAttribute("frameImage1", "IMAGE", "1x1.png");
+amo.registerAttribute("frameText31", "TEXT", "<div style='top:3px;left:7px;font-size:13px;'>300 Mbps Internet & TV</div>");
+amo.registerAttribute("frameText32", "TEXT", "<div style='top: 19px;left: 6px;width: 220px;line-height: 1;'><font style='font-size: 27.5px;' class='coloredText'>$65</font><font style='margin-left: 3px;font-size: 9px;display: inline-block;vertical-align: 3px;'>/mo.<br>1 yr.</font><div class='AlticeRegular' style='margin: -24px 0 0 76px;font-size: 9px;'>w/autopay & paperless bill<br>+ taxes, fees & charges</div></div>");
+amo.registerAttribute("frameText33", "TEXT", "&nbsp;");
+amo.registerAttribute("frameImage1", "IMAGE", "300x50_OPT_SUMMER_ACQ_AO_300Mb_65Yr1_NonSub_NY_Img_frame_2.png");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -157,10 +157,11 @@ amo.registerAttribute("frameImage1", "IMAGE", "1x1.png");
       background-color:#f5f4f7;
       opacity:1;">
       <!-- <div id="ref" class="asset adSizeContainer" data-image="ref"></div> -->
+      <div id="frameImage1" class="asset adSizeContainer" data-image="frameImage1"></div>
       <div id="frameText1" class="text-left AlticeBold"
         data-text="frameText1"
         style="top: 2px;
-          left: 10px;
+          left: 8px;
           width: 240px;
           height: 46px;
           font-size: 16px;
@@ -226,7 +227,7 @@ amo.registerAttribute("frameImage1", "IMAGE", "1x1.png");
         ad.root.addEventListener("click", function(e) {
           if('button' in e.target.dataset) { } else { amo.onAdClick('clickUrl'); } //amo.onDynAdClick(adData.feedData, "CLICK", adClickUrl); }
         });
-
+        gsap.set('#frameImage1',{x:-50,y:50});
         gsap.set('#frameText1,#frameText12', {autoAlpha:0});
         gsap.set('.frameImage', {x:'-100%'});
         gsap.set('.frameText', {y:'100%'});
@@ -278,6 +279,7 @@ amo.registerAttribute("frameImage1", "IMAGE", "1x1.png");
           .to('#frameText1', {autoAlpha:1})
           .to('#frameText1', {autoAlpha:0,delay:1.5})
           .to('#frameText12', {autoAlpha:1})
+          .to('#frameImage1', {x:0, y:0, duration: 0.7}, '-=0.3')
           .to('#frame1', (flag==true?{}:{delay:1.5, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
         }
         if('frame1' in ad.layers) ad.layers.frame1.remove();
